--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -236,7 +236,7 @@
                 <div class="card">
                   <div class="card-header py-3">
                     <div class="d-flex align-items-center justify-content-between">
-                      <h5 class="mb-0">Estoque</h5>
+                      <h5 class="mb-0">Numeros de Venda por Franquia</h5>
                     </div>
                   </div>
                   <div class="card-body">
@@ -248,7 +248,7 @@
                 <div class="card">
                   <div class="card-header py-3">
                     <div class="d-flex align-items-center justify-content-between">
-                      <h5 class="mb-0">Lucro Mensal</h5>
+                      <h5 class="mb-0">Receita Total por Franquia</h5>
                     </div>
                   </div>
                   <div class="card-body">
