feat:novas paginas para o projeto

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -79,72 +79,56 @@
       <ul class="metismenu" id="sidenav">
         <li>
           <a href="index.html" class="has-arrow">
-            <div class="parent-icon"><i class="material-icons-outlined">home</i>
-            </div>
+            <div class="parent-icon"><i class="material-icons-outlined">home</i></div>
             <div class="menu-title">Graficos de Análise</div>
           </a>
         </li>
                 <li>
           <a href="funcionarios.html" class="has-arrow">
-            <div class="parent-icon"><i class="material-icons-outlined">home</i>
-            </div>
+            <div class="parent-icon"><i class="material-icons-outlined">people</i></div>
             <div class="menu-title">Funcionários</div>
           </a>
         </li>
                 <li>
-          <a href="javascript:;" class="has-arrow">
-            <div class="parent-icon"><i class="material-icons-outlined">home</i>
-            </div>
+          <a href="Franquias.html" class="has-arrow">
+            <div class="parent-icon"><i class="material-icons-outlined">store</i></div>
             <div class="menu-title">Franquias</div>
           </a>
         </li>
-                <li>
-          <a href="javascript:;" class="has-arrow">
-            <div class="parent-icon"><i class="material-icons-outlined">home</i>
-            </div>
+        <li>
+          <a href="ItensPedido.html" class="has-arrow">
+            <div class="parent-icon"><i class="material-icons-outlined">list_alt</i></div>
             <div class="menu-title">Itens Pedido</div>
           </a>
         </li>
                 <li>
-          <a href="javascript:;" class="has-arrow">
-            <div class="parent-icon"><i class="material-icons-outlined">home</i>
-            </div>
+          <a href="HistoricoTrabalho.html" class="has-arrow">
+            <div class="parent-icon"><i class="material-icons-outlined">history</i></div>
             <div class="menu-title">Histórico de Trabalho</div>
           </a>
         </li>
         <li>
-          <a href="javascript:;" class="has-arrow">
-            <div class="parent-icon"><i class="material-icons-outlined">home</i>
-            </div>
+          <a href="Pedidos.html" class="has-arrow">
+            <div class="parent-icon"><i class="material-icons-outlined">receipt</i></div>
             <div class="menu-title">Pedidos</div>
           </a>
         </li>
         <li>
-          <a href="javascript:;" class="has-arrow">
-            <div class="parent-icon"><i class="material-icons-outlined">home</i>
-            </div>
+          <a href="Estoque.html" class="has-arrow">
+            <div class="parent-icon"><i class="material-icons-outlined">inventory</i></div>
             <div class="menu-title">Estoque</div>
           </a>
         </li>
                 <li>
-          <a href="javascript:;" class="has-arrow">
-            <div class="parent-icon"><i class="material-icons-outlined">home</i>
-            </div>
+          <a href="Despesas.html" class="has-arrow">
+            <div class="parent-icon"><i class="material-icons-outlined">payments</i></div>
             <div class="menu-title">Despesas</div>
           </a>
         </li>
         <li>
-          <a href="javascript:;" class="has-arrow">
-            <div class="parent-icon"><i class="material-icons-outlined">widgets</i>
-            </div>
+          <a href="Cardapio.html" class="has-arrow">
+            <div class="parent-icon"><i class="material-icons-outlined">restaurant_menu</i></div>
             <div class="menu-title">Cardápio</div>
-          </a>
-        </li>
-        <li>
-          <a href="javascript:;" class="has-arrow">
-            <div class="parent-icon"><i class="material-icons-outlined">widgets</i>
-            </div>
-            <div class="menu-title">Gráficos</div>
           </a>
         </li>
 
